# omegalib

./: .gitignore  .gitmodules  .travis.yml  Authors.txt  CMakeLists.txt  MakeRelease.bat.in  README.md  default.cfg  default_init.py  getomega  index.html  index2.html  omega  omega.bat  omega.cmake  params.json  update.html
CMakeModules/: FileInformation.cmake  FindBulletHelper.cmake  FindOmegalib.cmake  FindOpenCL.cmake  ModuleUtils.cmake  OmegalibConfig.cmake.in  OmegalibVersion.cmake  UsePch.cmake
caveutil/: Doxyfile
caveutil/html/: annotated.html  classcaveutil_1_1_flipbook_actor-members.html  classcaveutil_1_1_flipbook_actor.html  classcaveutil_1_1_interpol_actor-members.html  classcaveutil_1_1_interpol_actor.html  classcaveutil_1_1caveutil-members.html  classcaveutil_1_1caveutil.html  classes.html  functions.html  functions_func.html  hierarchy.html  index.html
cavevoc/html/: annotated.html  classcavevoc_1_1cavevoc-members.html  classcavevoc_1_1cavevoc.html  classes.html  functions.html  functions_func.html  index.html  namespacecavevoc.html  namespaces.html
data/system/: desktop-2view.cfg
docs/: Diagrams.pptx  Doxyfile  OmegaDesk.mm  banner.pptx
docs/intro2/: omegalib.pptx
docs/logo/: OmegaLogo.pptx
etc/: mcsend.py  template.md
etc/docs/: Diagrams.pptx  Doxyfile  omegalib Introduction.pptx
etc/helloModule/: README.md  helloModule.cpp
etc/mtools/: README.md  add.cmake  build.cmake  choose.cmake  get.cmake  module.stat.cmake  pack.app.cmake  pack.build.cmake  pack.prepare.cmake  pack.publish.cmake  remove.cmake  set.cmake
examples/ohello/: CMakeLists.txt  ohello.cpp
examples/ohello2/: CMakeLists.txt  ohello2.cpp
examples/ohelloView/: CMakeLists.txt  cube.cpp  cube.h  ohelloView.cpp
examples/ohelloWidgets/: CMakeLists.txt  ohelloWidgets.cpp
examples/omegaSound/: CMakeLists.txt  omegaSound.cpp
examples/porthello/: CMakeLists.txt  porthello.cpp
examples/python/: _eqcfg.eqc  drag.py  drawfps.py  imgscroll.py  mt.py  multitexture.py  randomNumber.py  textbox.py  threads.py  widgetDraw.py
examples/text2texture/: CMakeLists.txt  StringTextureSource.cpp  StringTextureSource.h  text2texture.cpp
include/: omega.h  omegaGl.h  omegaToolkit.h  version.h
include/GL/: glew.h  glxew.h
install/: pack.cmake  pack.cmake.in
menu_sounds/: master.aup
modules/: README.md  modules.py  mpull  mstat  show_status.py
navigator/: index.html
shaders/: AnaglyphGreenMagenta.frag  AnaglyphRedCyan.frag  ColumnInterleaved.frag  Composite.vert  LineInterleaved.frag  PixelInterleaved.frag
src/: CMakeLists.txt  pack.cmake  pack_core.cmake  pack_extras.cmake  pack_functions.cmake  pack_header.cmake
src/apps/mcsend/: CMakeLists.txt  mcsend.cpp
src/apps/mcserver/: CMakeLists.txt  mcserver.cpp
src/apps/oimg/: CMakeLists.txt  oimg.cpp
src/apps/olauncher/: CMakeLists.txt  olauncher.cpp
src/apps/orun/: CMakeLists.txt  icon.rc  orun.cpp
src/apps/osgbBasicDemo/: CMakeLists.txt  osgbBasicDemo.cpp
src/apps/osgbCollision/: CMakeLists.txt  osgbCollision.cpp
src/apps/osgbDice/: CMakeLists.txt  osgbDice.cpp
src/apps/osgbSlider/: CMakeLists.txt
src/apps/osgviewer/: CMakeLists.txt  osgviewer.cpp
src/displaySystem_GLFW/: CMakeLists.txt  displaySystem_GLFW.cpp
src/displaySystems/: CMakeLists.txt
src/displaySystems/Equalizer/: CMakeLists.txt  ChannelImpl.cpp  ConfigImpl.cpp  EqualizerDisplaySystem.cpp  EqualizerDisplaySystem.h  NodeImpl.cpp  PipeImpl.cpp  WindowImpl.cpp  displaySystem_Equalizer.cpp  eqinternal.h
src/displaySystems/GLFW/: CMakeLists.txt  displaySystem_GLFW.cpp
src/glew/: CMakeLists.txt  glew.c
src/glew/GL/: glew.h
src/omega/: CMakeLists.txt  Camera.cpp  CameraController.cpp  CameraOutput.cpp  Color.cpp  Console.cpp  CylindricalDisplayConfig.cpp  DisplayConfig.cpp  DisplayTileConfig.cpp  DisplayUtils.cpp  DrawContext.cpp  DrawInterface.cpp  Engine.cpp  EqualizerDisplaySystem.cpp  EventSharingModule.cpp  Font.cpp  GamepadCameraController.cpp  GlutDisplaySystem.cpp  GpuBuffer.cpp  GpuProgram.cpp  GpuResource.cpp  ImageUtils.cpp  KeyboardMouseCameraController.cpp  KeyboardService.cpp  MissionControl.cpp  ModuleServices.cpp  MouseCameraController.cpp  MouseService.cpp  Node.cpp  NullDisplaySystem.cpp  ObserverUpdateServiceExt.cpp  PixelData.cpp  PlanarDisplayConfig.cpp  Platform.cpp  Pointer.cpp  PythonInterpreter.cpp  PythonShellWrapper.cpp  RenderCorrection.cpp  RenderTarget.cpp  Renderable.cpp  (+18 more)
src/omega/boostPython/: dict.cpp  errors.cpp  exec.cpp  import.cpp  list.cpp  long.cpp  module.cpp  numeric.cpp  object_operators.cpp  object_protocol.cpp  slice.cpp  str.cpp  tuple.cpp  wrapper.cpp
src/omega/boostPython/converter/: arg_to_python_base.cpp  builtin_converters.cpp  from_python.cpp  registry.cpp  type_id.cpp
src/omega/boostPython/object/: class.cpp  enum.cpp  function.cpp  function_doc_signature.cpp  inheritance.cpp  iterator.cpp  life_support.cpp  pickle_support.cpp  stl_iterator.cpp
src/omega/eqinternal/: ChannelImpl.cpp  ConfigImpl.cpp  NodeImpl.cpp  PipeImpl.cpp  WindowImpl.cpp  eqinternal.h
src/omegaToolkit/: CMakeLists.txt  CameraStereoSwitcher.cpp  CameraStreamer.cpp  ControllerManipulator.cpp  DefaultMouseInteractor.cpp  DefaultTwoHandsInteractor.cpp  ImageBroadcastModule.cpp  MouseManipulator.cpp  SceneEditorModule.cpp  ToolkitUtils.cpp  UiModule.cpp  UiRenderPass.cpp  UiScriptCommand.cpp  WandManipulator.cpp  WandPointerSwitcher.cpp  omegaToolkitPythonApi.cpp  precompiled.h
src/omegaToolkit/ui/: AbstractButton.cpp  Button.cpp  Container.cpp  DefaultSkin.cpp  Image.cpp  Label.cpp  Menu.cpp  MenuManager.cpp  Slider.cpp  TextBox.cpp  Widget.cpp
src/orun/: icon.aps  orun.cpp
stylesheets/: styles.css
system/: cave-emu.cfg  desktop-anaglyph.cfg  desktop-omicron.cfg  desktop-sound.cfg  desktop.cfg  headless.cfg  offscreen.cfg  quickCommands.py  sample.cfg  test-customTile.cfg  test-cylindrical.cfg  test-multinode.cfg  test-multinode8.cfg  test-multipipe.cfg  test-tracker.cfg  test-wand-emulation.cfg  test-warpblend.cfg  test-warpmesh.csv
tools/: mcsend.py
ui/: widget-label.frag
wandaid/: index.html
(+3169 files in other folders)
